Converted main.css to scss so I could use mixins. Added a radio button so you can go back to normal 100% timer. Everything is working. Time to try to make the timer more accurate using Date.now() calculations.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </div>
 
             <div class="outer-radio-container">
+                <label class="radio-container">100%
+                    <input type="radio" name='less-or-more' class='radio-equal-to' checked='checked'>
+                    <span class='checkmark'></span>
+                </label>
+
                 <label class="radio-container">90% - 100%
                     <input type="radio" name='less-or-more' class='radio-less-than'>
                     <span class="checkmark"></span>
@@ -47,8 +52,10 @@
                 </label>
             </div>
 
-            <button class='start-button'>Start Timer</button>
-            <button class='reset-button'>Reset Timer</button>
+            <div class="buttons-container">
+                <button class='start-button'>Start Timer</button>
+                <button class='reset-button'>Reset Timer</button>
+            </div>
 
             <p class="clock"></p>
 
