Shit is a bit wonky but it seems to work. I added the show/hide timer slider and I think it all still functions.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 <button class='reset-button'>Reset Timer</button>
             </div>
 
+            <label class="show-hide-timer-label">
+                <p class="show-hide-timer-text">Hide Timer</p>
+                <input type="checkbox" class='show-hide-timer'>
+                <span class="slider"></span>
+            </label>
+
             <p class="clock"></p>
 
             <button class="stop-audio">Stop Audio</button>
