Fixed a couple spelling errors. Revamped timer. Now it continues to count negative seconds if you leave it running.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <b>I've</b> been meditating for a while now and have begun to anticipate
                 when my timer will go off. The amount of time I meditate fits into my
                 schedule well but I wanted something to set my timer a bit more randomly
-                so that I won't know when it will go off.
+                ensuring that I'll be unable to predict its end.
             </p>
             <p class='start-p'>After clicking begin select how many minutes you want
                 your timer to run for. Then, optionally select one of two radio buttons.
                 Either radio button will cause your timer to run for a random amount
-                of time. One will be between 10% longer or shorter than your selected
-                time. The other will only be up to 10% longer.
+                of time. One will be between 90% and 110% of your selected
+                time. The other will be 90% to 100%.
             </p>
             <button class='begin'>Begin</button>
         </div>
